styles/site.css
/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*BASIC mobile-first/narrow setup*/
html {
    box-sizing: border-box;
    background-color: #FFFFFF;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

/*note this was given in a previoisu assigment and is therefore a course resource*/
/*general basic fonts, colors, sizes*/
body {
    color: #4a4040;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding: 2em;
    /*I know this is technically responsive BUT instructions said to make sure the body had a max-width to ensure usability*/
    max-width: 1200px;
    margin: 0 auto;
}

.body_dot_class {
    background-image: radial-gradient(#bdbab2 0.8px, transparent 0.8px);
    background-size: 25px 25px;
    /*cite: https://css-irl.info/css-halftone-patterns/*/
}

.title_subscript {
    font-weight: 300;
    margin: 0;
}

nav menu li a,
.div_text_paragraph {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
}

/*mobile-first image settings*/
img {
    display: block;
    width: 100%;
    max-width: 600px;
    margin: 0.5em auto;
}

/*styling nav*/
nav menu li {
    list-style: none;
    font-size: 1em;
    border: none;

}

nav menu li a {
    text-decoration: none;
    color: #4a4040;
}

menu {
    display: flex;
    flex-direction: column;
    padding: 0;
    border: none;
    max-width: 300px;
    gap: 1rem;
    margin: 1em auto;

}

nav a {
    display: block;
    padding: 0.5rem 0.5rem;
    text-align: center;
    font-weight: 400;
    background-color: #CBD5C0;
    border-radius: 50px;
}

/*NOTE: The heading having plently of space and larger buttons is a design choice - as people on small mobile phones need larger areas to click*/

footer {
    padding: 1em;
}

/*This is to indicate what page you're on when you're on it or when you're clicking the link*/
nav a.active {
    background-color: #4e5c4e;
    /*font-weight: 700;*/
    color: #FFFFFF;
}

nav a.active img {
    filter: invert(1);
    /*needed to change the icon color to white*/
    /*got from documentation + help in OH*/
}

nav a:hover {
    background-color: #a6bda6;
    /*supposed to work when you're hovering over it*/
    /*might modify later...*/
}

/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*BASIC Style CLASSES*/

.bold {
    font-weight: 650;
}

.center {
    text-align: center;
}

.home_section {
    padding: 1.75em;
    background-color: #f5e6e0;
    border-radius: 20px;
    margin: 15px 0;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
    border: 1px solid rgba(0, 0, 0, 0.06);
}

.exp_section {
    padding: 1.75em;
    background-color: #d6e2e9;
    border-radius: 20px;
    margin: 15px 0;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
    border: 1px solid rgba(0, 0, 0, 0.06);
}


.club_section {
    padding: 1.5em;
    background-color: #e7dbe8;
    border-radius: 20px;
    margin: 15px 0;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
    border: 1px solid rgba(0, 0, 0, 0.06);
}


.div_text_paragraph {
    border: 1px solid #4a4040;
    background-color: #FFFFFF;
    padding: 0.75em;
    border-radius: 8px;
    font-size: 1.1em;
}

.footer_class {
    background-color: #d4b8b8;
    color: #4a4040;
    border-radius: 20px;
    border: none;
    border-bottom: none;
    font-size: 16px;
    text-decoration: none;

}

.line_div {
    border-bottom: 1.25px solid #bdbab2;
    margin: 1em 0;
}

.footer_image {
    max-width: 40px;
    height: auto;
}

.page_title {
    border-bottom: 1.25px solid #bdbab2;
    margin-bottom: 1em;
    padding-bottom: 25px;
    font-weight: 200;
}

.mobile_nav_styling {
    border-bottom: 1.5px solid #bdbab2;
}

.footer_divider {
    border-bottom: 1.5px dashed #4a4040;
    width: 20%;
    margin: 0 auto;
}

.home_headshot_img {
    border-radius: 50%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    width: 75%;
    max-width: 600px;
}

.club_photos_img {
    border-radius: 12px;
    width: 100%;
    margin: 0 auto;
    display: block;
}


figure {
    margin: 0;
}

/*makes the skills look more consultingy*/
.skills_pills_list {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    padding: 0;
    list-style: none;
}

.skills_pills_list li {
    background-color: #CBD5C0;
    padding: 8px 16px;
    border-radius: 50px;
    font-size: 0.9em;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
    /* yay shadow again*/
}

.header_logo_image {
    max-width: 200px;
    height: auto;
    margin: 0 auto;
}

.header_text {
    margin: 0 auto;
}

header h1 {
    margin: 5px;
}

.top-content {
    background-color: #FFFFFF;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    position: relative;
}

header h1 {
    margin-top: 0;
}

.nav_logos_small {
    max-width: 25px;
    height: auto;
}

.home_special_text {
    border-left: 5px solid #d4b8b8;
    font-weight: 575;
    font-style: italic;
    padding: 0.25em;
}

.exp_special_text {
    border-left: 5px solid #d6e2e9;
    font-weight: 575;
    font-style: italic;
    padding: 0.25em;
}


.club_special_text {
    border-left: 5px solid #e7dbe8;
    font-weight: 575;
    font-style: italic;
    padding: 0.25em;
}

.figcaption_styling {
    background-color: #e7dbe8;
    border-radius: 10px;
    border: 1px #bdbab2 solid;
    padding: 0.5em;
    margin: 0;
}


/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*GENERAL FLEXBOX CLASSES*/
.footer_inner_flex {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
    align-items: center;
}

.footer_outer_flex {
    display: flex;
    flex-direction: column;
    gap: 0.5em;
    align-items: center;
    margin-top: 0.5em;
}

.nav_menu_flex {
    display: flex;
    flex-direction: column;
}

.nav_inner_flex {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
    align-items: center;
    justify-content: center;
}

.home_aboutme_flex {
    display: flex;
    flex-direction: column;
}

.figure_flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 600px;
    margin: 0 auto;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*This is for the personal page styling and flexboxes solely*/

blockquote {
    font-style: italic;
    font-weight: 550;
    border-right: 1px solid #4a4040;
    border-top: 1px solid #4a4040;
    border-bottom: 1px solid #4a4040;
    padding: 1em;
    border-left: 5px solid #4a4040;
    background-color: #fbdaf0;

}

.music_section {
    padding: 1em;
    background-image:
        linear-gradient(rgba(240, 224, 245, 0.75), rgba(245, 230, 224, 0.8)),
        url("../images/pink_flowers_music.jpg");
    background-size: cover;
    background-position: center;
    font-weight: 500;
    /*margin-bottom: 0.5em;*/
}

.poem {
    white-space: pre-line;
    font-size: 12pt;
    font-weight: 575;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.poem_what_section {
    padding: 1em;
    background-image:
        linear-gradient(rgba(240, 224, 245, 0.75), rgba(245, 230, 224, 0.8)),
        url("../images/poetry_flowers_1.jpg");
    background-size: cover;
    background-position: center;
    font-weight: 500;
    /*margin-bottom: 0.5em;*/
}

.original_music_section {
    padding: 1em;
    background-image:
        linear-gradient(rgba(240, 224, 245, 0.75), rgba(245, 230, 224, 0.8)),
        url("../images/original_flower.jpg");
    background-size: cover;
    background-position: center;
    font-weight: 500;
}

figcaption a {
    text-decoration: none;
    color: #4e5c4e;
}

figcaption {
    font-size: 10pt;
}


.volunteering_section {
    padding: 1.75em;
    background-color: #f5e6e0;
    border-radius: 20px;
    margin: 15px 0;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
    border: 1px solid rgba(0, 0, 0, 0.06);
}

.personal_flex {
    display: flex;
    flex-direction: column;
}

/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*Project PAGE STUFF*/

.proj_section {
    padding: 1.25em;
    background-color: #FAF9F6;
    margin: 15px 0;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
    border: 1px solid rgba(0, 0, 0, 0.06);
}

.proj_special_text {
    border-left: 5px solid #d4b8b8;
    font-weight: 575;
    padding: 0.25em;
}

.project_flex {
    display: flex;
    flex-direction: column;
}

/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/
/*Citations*/
footer cite a {
    color: #4a4040;
    margin: 0;
}

footer cite {
    font-size: 8pt;
    margin: 0;
}

.in-text-cite {
    font-size: 8pt
}

.in-text-cite a {
    color: #4a4040;
}


/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!1*/
/*Interactive styling for M3 -- */
.hamburger-line {
    display: block;
    width: 35px;
    height: 5px;
    background-color: #CBD5C0;
    margin: 7px auto;
}

.hamburger_design {
    background-color: #f3f3f3;
    border: 0.25px solid #b5b3b3;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    width: 50px;
    position: absolute;
    /*placed in reference to the "top-content" class"*/
    top: 40px;
    right: 0;
}

#hamburger-button:hover {
    background-color: #a6bda6;

    .hamburger-line {
        background-color: white;
    }
}

